[gd_scene load_steps=16 format=3 uid="uid://bnih347l0un2n"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_wtr5s"]
[ext_resource type="Texture2D" uid="uid://dwmwuf0tuijwf" path="res://assets/32rogues/monsters.png" id="2_t4ivk"]
[ext_resource type="Script" path="res://scripts/player/player_attack.gd" id="3_sav2k"]
[ext_resource type="Texture2D" uid="uid://qmdabwr0mq71" path="res://assets/SFX303_nyknck/Sprite-0001-Sheet-Sheet.png" id="4_4liia"]
[ext_resource type="Script" path="res://scripts/player/life_force.gd" id="5_ckido"]
[ext_resource type="PackedScene" uid="uid://b6ws03lwfd0te" path="res://scenes/components/health_component.tscn" id="5_j5mnj"]
[ext_resource type="Script" path="res://scripts/player/realm_shift.gd" id="7_iftrq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l7kr"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hruq3"]
atlas = ExtResource("2_t4ivk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsixq"]
size = Vector2(28, 10)

[sub_resource type="Animation" id="Animation_oblaf"]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAttack/MeleeAttack:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_4liia")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAttack/MeleeAttack:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerAttack/MeleeAttack:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerAttack/MeleeAttack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAttack/MeleeAttack:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_gsixq")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-3, 1.5), Vector2(-2, -4), Vector2(-2, -8)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_c5e25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAttack/MeleeAttack:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_4liia")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAttack/MeleeAttack:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerAttack/MeleeAttack:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_hruq3")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAttack/MeleeAttack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerAttack/MeleeAttack:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:shape")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_gsixq")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 1.5)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerAttack/MeleeAttack/MeleeHitbox/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qcx5u"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_hruq3")]
}

[sub_resource type="Animation" id="Animation_vgql5"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_hruq3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odown"]
_data = {
"RESET": SubResource("Animation_c5e25"),
"attack": SubResource("Animation_oblaf"),
"idle": SubResource("Animation_qcx5u"),
"jump": SubResource("Animation_vgql5")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_wtr5s")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5l7kr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_hruq3")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_odown")
}
autoplay = "idle"

[node name="PlayerAttack" type="Node2D" parent="."]
script = ExtResource("3_sav2k")

[node name="MeleeAttack" type="Sprite2D" parent="PlayerAttack"]
position = Vector2(2.98023e-08, 1.87755e-06)
scale = Vector2(0.969697, 0.969697)
texture = ExtResource("4_4liia")
hframes = 6
vframes = 6

[node name="MeleeHitbox" type="Area2D" parent="PlayerAttack/MeleeAttack"]
position = Vector2(-3.07336e-08, -1.93622e-06)
scale = Vector2(1.03125, 1.03125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttack/MeleeAttack/MeleeHitbox"]
position = Vector2(-3, 1.5)
shape = SubResource("RectangleShape2D_gsixq")
disabled = true

[node name="AttackDuration" type="Timer" parent="PlayerAttack"]
wait_time = 0.2
one_shot = true

[node name="LifeForce" type="Node2D" parent="."]
script = ExtResource("5_ckido")

[node name="HealthComponent" parent="." instance=ExtResource("5_j5mnj")]
max_health = 100

[node name="RealmShift" type="Node2D" parent="."]
script = ExtResource("7_iftrq")

[connection signal="area_entered" from="PlayerAttack/MeleeAttack/MeleeHitbox" to="PlayerAttack" method="_on_melee_hitbox_area_entered"]
